# HieraChain-Consensus

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
benchmark/consensus/: ordering_service_analyze.py  ordering_service_benchmark.py
src/: lib.rs
src/consensus/: mod.rs  ordering_service.rs
src/core/: mod.rs  parallel_engine.rs
src/core/consensus/: base_consensus.rs  mod.rs
src/error_mitigation/: error_classifier.rs  mod.rs  recovery_engine.rs
src/hierarchical/: channel.rs  hierarchy_manager.rs  mod.rs
src/storage/: mod.rs  world_state.rs
