[package]
name = "hierachain-consensus"
version = "0.1.0"
edition = "2021"

[lib]
name = "hierachain_consensus"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
pyo3 = { version = "0.27.0", features = ["extension-module"] }

[package.metadata.maturin]
name = "hierachain_consensus"